# neomutt-rs

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs
cache/: Cargo.toml
cache/src/: lib.rs
ci/: start-greenmail.sh
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  thread.rs
core/tests/: parse_fixtures.rs
core/tests/fixtures/: html-only.eml  multipart-alternative.eml  plain-text.eml  rfc2047-encoded.eml  with-attachment.eml
docs/: ARCHITECTURE.md  BACKLOG.md  CURRENT-STATE.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  USER_MANUAL.md
mail-store/: Cargo.toml
mail-store/src/: lib.rs  main.rs
mail-store/tests/: README.md  integration_test.rs
pgp/: Cargo.toml
pgp/src/: lib.rs
search/: Cargo.toml
search/src/: lib.rs
smtp-client/: Cargo.toml
smtp-client/src/: lib.rs
ui/: Cargo.toml
ui/src/: lib.rs
