[package]
name = "neomutt"
version = "0.1.0"
edition = "2024"
description = "neomutt-rs — terminal email client (binary)"

[dependencies]
neomutt-core = { path = "../core" }
neomutt-cache = { path = "../cache" }
neomutt-config = { path = "../config" }
neomutt-mail-store = { path = "../mail-store" }
neomutt-pgp = { path = "../pgp" }
neomutt-search = { path = "../search" }
neomutt-smtp-client = { path = "../smtp-client" }
neomutt-ui = { path = "../ui" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
notify-rust = "4"
open = "5"
ammonia = "4"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
