[package]
name = "neomutt-pgp"
version = "0.1.0"
edition = "2024"
description = "PGP encrypt/decrypt/sign/verify via sequoia-openpgp"

[dependencies]
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow = "1"
zeroize = "1"
rsa = "0.10.0-rc.18"

[dev-dependencies]
tempfile = "3"
