[package]
name = "neomutt-ui"
version = "0.1.0"
edition = "2024"
description = "ratatui + crossterm UI for neomutt-rs"

[dependencies]
neomutt-core = { path = "../core" }
neomutt-cache = { path = "../cache" }
neomutt-mail-store = { path = "../mail-store" }
neomutt-pgp = { path = "../pgp" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["sync"] }
